--- a/Web Student/Views/Homework/MyHomeworks.cshtml
+++ b/Web Student/Views/Homework/MyHomeworks.cshtml
@@ -1,7 +1,6 @@
-﻿потребител @ViewBag.UserData.FullName
+﻿@ViewBag.UserName
 <br />
-@ViewBag.UserData.UserFK
-<h2>Моите домашни</h2>
+<h2>@(ViewBag.Title)</h2>
 <style>
     table, th, td {
         border: 1px solid black;
