--- a/Web Student/Views/Homework/ApplyHomework.cshtml
+++ b/Web Student/Views/Homework/ApplyHomework.cshtml
@@ -1,4 +1,4 @@
-﻿<form method="post" asp-action="SubmitMyHomework" enctype="multipart/form-data">
+﻿<form method="post" asp-action="SubmitHomeworkSolution" enctype="multipart/form-data">
     <input type="hidden" name="id" value="@ViewBag.HomeworkId" />
     <input type="file" name="file" /> решение (снимка или файл)
     <br />
@@ -10,10 +10,7 @@
 </form>
 
 <br />
-<input type="button" value="обратно" onclick="Return()" />
+<form asp-controller="Homework" asp-action="MyHomeworks">
+    <input type="submit" value="обратно" />
+</form>
 
-<script>
-    function Return() {
-        window.close();
-    }
-</script>
