--- a/Web Student/Views/Profile/Index.cshtml
+++ b/Web Student/Views/Profile/Index.cshtml
@@ -13,7 +13,7 @@
     }
 }
 
-Потребителско име : @ViewBag.userData.UserFK
+Потребителски ID : @ViewBag.userData.UserFK
 <br />
 
 <img src="@PictureProcessing.PictureProcessor.profilePathWeb/@(ViewBag.picture)" />
