--- a/Web Student/Views/Homework/MyHomeworks.cshtml
+++ b/Web Student/Views/Homework/MyHomeworks.cshtml
@@ -78,5 +78,6 @@
 {
     <form method="post" action="/Homework/AddHomeworkTask/@(ViewBag.UserData.Id)">
         <input type="submit" value="добави домашно" />
+        <a href="~/Homework/Index"><input type="button" value="обратно" /></a>
     </form>
 }
