--- a/Web Student/Views/Homework/AddHomeworkTask.cshtml
+++ b/Web Student/Views/Homework/AddHomeworkTask.cshtml
@@ -12,10 +12,8 @@
     <br />
     <br />
     <input type="submit" value="добави" />
+    <a href="~/Homework/MyHomeworks/@(ViewBag.UserData.Id)"><input type="button" value="обратно" /></a>
 </form>
 
-<form method="post" action="/Homework/MyHomeworks/@(ViewBag.UserData.Id)">
-    <input type="submit" value="обратно" />
-</form>
 <br />
 
